# fast_bbox_maker

./: CMakeLists.txt  all_files.txt  package.xml  testresize.py
launch/: boxer.launch
scripts/: all_files.txt  box_finder.py  box_maker.py  camera_saver.py  list_for_darknet.py  test.txt
